chapter-25/k8s/base/recommendation-service/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-service
spec:
  hosts:
    - recommendation-service
  http:
    - match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: recommendation-service
            subset: canary
          weight: 100
    - route:
        - destination:
            host: recommendation-service
            subset: stable
          weight: 100
